[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "analyst_toolkit_deploy"
version = "0.1.2"
description = "Scaffold and configuration tools for the Analyst Toolkit"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
  {name = "Garrett Schumacher", email = "me@garrettschumacher.com"}
]
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "pandas>=2.0",
  "numpy>=1.24",
  "PyYAML>=6.0",
]

[project.scripts]
analyst-deploy = "analyst_toolkit_deploy.cli:main_deploy"
analyst-infer-configs = "analyst_toolkit_deploy.cli:main_infer"

[project.urls]
homepage = "https://github.com/G-Schumacher44/analyst_toolkit_deployment_utility"
repository = "https://github.com/G-Schumacher44/analyst_toolkit_deployment_utility"

[tool.hatch.build.targets.wheel]
packages = ["src/analyst_toolkit_deploy"]

[tool.hatch.build.targets.sdist]
include = [
  "src/analyst_toolkit_deploy/**",
  "README.md",
  "LICENSE"
]
