[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "analyst_toolkit_deploy"
version = "0.2.5"
description = "Scaffold and configuration tools for the Analyst Toolkit"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
  {name = "Garrett Schumacher", email = "me@garrettschumacher.com"}
]
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "pandas>=2.0",
  "numpy>=1.24",
  "PyYAML>=6.0",
]
keywords = ["data-analysis", "etl", "scaffolding", "template", "data-science", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]

[project.scripts]
analyst-deploy = "analyst_toolkit_deploy.cli:main_deploy"
analyst-infer-configs = "analyst_toolkit_deploy.cli:main_infer"

[project.urls]
homepage = "https://github.com/G-Schumacher44/analyst_toolkit_deployment_utility"
repository = "https://github.com/G-Schumacher44/analyst_toolkit_deployment_utility"

[tool.hatch.build.targets.wheel]
packages = ["src/analyst_toolkit_deploy"]
include = [
  "/src/analyst_toolkit_deploy/templates"
]

[tool.hatch.build.targets.sdist]
include = [
  "src/analyst_toolkit_deploy/**",
  "README.md",
  "LICENSE"
]

[tool.black]
line-length = 160
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 160
src_paths = ["src"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = false
check_untyped_defs = true
disallow_incomplete_defs = false
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
